style.css
/* ... */
.toptweet-popup-grp2-sub1 {
    display: flex;
    padding: 16px;
}

.toptweet-popup-grp2-sub1-text {
    display: block;
}

span.toptweet-popup-gray-text {
    font-family: inherit;
    font-size: 13px;
    font-weight: 400;
    color:rgb(113, 118, 123);
    line-height: 16px;
}

.toptweet-popup p {
    font-size: 15px;
    font-weight: 400px;
    color: rgb(231, 233, 234);
    line-height: 20px;
}                    

.toptweet-popup-grp2-sub2 {
    display: flex;
    padding: 16px;
}
/* TOP TWEET POP UP ENDS HERE */


.circular-bg {
    padding: 8px 8px 5px;
    border-radius: 50%;
    margin-right: -8px;
}

.circular-bg:hover {
    background-color: rgba(29, 155, 240, 0.1);
}

.post-tweets {
    border-bottom: 1px solid rgb(47, 51, 54);
    padding: 4px 0;
    width: 100%;
}

.post-tweets-info {
    display: flex;
    padding: 0 16px;
    width: 100%;
}

.group1 {
    padding-top: 4px;
    margin-right: 12px;
}

.group1 img {
    width: 48px;
    height: 48px;
    border-radius: 50%;
    margin: 4px 0;
}

.group2 {
    width: 100%;
}

.group2 input {
    width: 504px;
    height: 60px;
    padding: 4px 0;
    text-align: left;
    margin-left: 6px;
    border: none;
    font-family: inherit;
    font-size: 20px;
    font-weight: 400;
    outline: none;
    background-color: rgb(0,0,0);
}

.group2-a {
    display: none;
    width: 100%;
    border-bottom: 1px solid rgb(47, 51, 54);
}

.group2-a.active {
    display: block;
}

.tweet-component {
    display: flex;
    padding: 4px 12px 12px 12px;
    gap: 4px;
}

.tweet-component img {
    width: 16px;
    height: 16px;
    /* margin-top: 3px; */
    margin-left: -8px;
    filter: invert(54%) sepia(25%) saturate(1552%) hue-rotate(162deg) brightness(95%) contrast(99%);
}

span.tweet-component-text {
    font-size: 14px;
    font-family: inherit;
    font-weight: bold;
    color: rgb(29, 155, 240);
}

.group2-b {
    display: flex;
}

.posttweet-icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0 2px;
    border: none;
    align-items: center;
    width: 100%;
}

.post-icons {
    display: flex;
    justify-content: space-between;
    border: none;
    gap: 15px;  
}

.post-icons-img {
    width: 20px;
    height: 20px;
    color: rgb(113, 118, 123);
    text-align: center;
    filter: invert(54%) sepia(25%) saturate(1552%) hue-rotate(162deg) brightness(95%) contrast(99%);
}

.post-icons-img .inactive-icon {
    width: 20px;
    height: 20px;
    color: rgb(113, 118, 123);
    text-align: center;
    opacity: 0.5;
} 

.posttweet-btn {
    border: none;
    font-family: inherit;
    font-weight: 700;
    font-size: 15px;
    padding: 10px 16px;
    background: rgb(29, 155, 240);
    color: rgb(255, 255, 255);
    opacity: 0.5;
    border-radius: 9999px;
    margin-top: 12px;
    margin-bottom: 5px;
}

.unshown-tweets {
    border-bottom: 1px solid rgb(47, 51, 54);
    min-height: 48px;
    width: 100%;
    font-size: 15px;
    font-family: inherit;
    color: rgb(29, 155, 240);
    text-align: center;
    line-height: 20px;
    padding-top: 12px;
}

.tweets {
    display: flex;
    font-size: 15px;
    width: 100%;
    border-bottom: 1px solid rgb(47, 51, 54);
    margin-bottom: 2px;
    padding: 10px 15px;
}

.tweets:hover {
    background-color: #070707;
    cursor: pointer;
}

.tweets a {
    color: rgb(29, 155, 240);
    text-decoration: none;
}

.tweets .tweets-a a:hover {
   text-decoration: underline;
}

.tweets .tweet-profile-img img{
    width: 48px;
    height: 48px;
    border-radius: 50%;
    margin-right: 12px;
}

.tweet-user-info .tweet-user-header {
    display: flex;
    cursor: pointer;
    justify-content: space-between;
}

.tweet-user-header-main {
    display: flex;
    align-items: center;

}

.tweet-user-header {
    padding: 0;
}

.tweet-dottedmore-img {
    width: 18px;
    height: 18px;
    filter: invert(51%) sepia(9%) saturate(251%) hue-rotate(169deg) brightness(87%) contrast(86%);
}

.tweet-dottedmore-img:hover {
    filter: invert(54%) sepia(25%) saturate(1552%) hue-rotate(162deg) brightness(95%) contrast(99%);
}

.tweet-dottedmore a {
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 9999px;
}

.tweet-dottedmore a:hover {
    background-color: rgba(29, 155, 240, 0.1);
}

.tweet-user-info {
    width: 100%;
    margin-top: -5px;
}

.gray-text {
    color: rgb(113, 118, 123) !important;
}

/* USER INFO POP STARTS HERE */
.user-popup-info {
    position: absolute;
    background-color: rgb(0,0,0);
    left: 17%;
    width: 305px;
    border-radius: 16px;
    display: block;
    box-shadow: rgb(255 255 255 / 20%) 0px 0px 15px, rgb(255 255 255 / 15%) 0px 0px 3px 1px;
    transition: opacity 0s ease-out;
    transition-delay: 1s;
    opacity: 0;
    height: 0;
    overflow: hidden;
    z-index: 800;
}

.show-user-info.active .user-popup-info, .show-user-info:hover .user-popup-info {
    opacity: 1;
    height: auto;
    min-height: 200px;
    padding: 15px;
}

.user-profile-name .user-popup-info {
    left: 22%;
}

.tweet-username .user-popup-info {
    left: 28%;
}

.popup-head-segment {
    display: flex;
    justify-content: space-between;
    padding-bottom: 10px;
}

.popup-head-segment img {    
    width: 64px !important;
    height: 64px !important;
    border-radius: 50px !important;
    margin-right: 10px !important;
}

a.popup-following-button {    
    background-color:rgb(231, 233, 234);
    border-radius: 30px;
    padding: 5px 17px;
    height: 30px;
    text-decoration: none;
    color:rgb(42, 44, 46);
    font-size: 15px;
    font-weight: 700;
    text-align: center;
}

a.popup-following-button:hover { 
    text-decoration: none;
    background-color: rgb(206 206 206);
}

.popup-name-segment {    
    justify-content: space-between;
    width: 100%;
    margin-bottom: 10px;
}

.popup-full-name {
    display: flex;
    gap: 3px;
}
/* ... */

